layout bug...

--- a/src/components/control-panel/ControlPanel.css
+++ b/src/components/control-panel/ControlPanel.css
@@ -7,6 +7,7 @@
 
 .controls {
     display:grid;
+    height: 100%;
     grid-template-columns: repeat(2, 1fr);
 }
 
@@ -19,7 +20,7 @@
 }
 
 .logs-wrapper{
-    min-height: 40vh;
+    height: 300px;
     padding-top: 2em;
     padding-bottom: 2em;
     padding-right: 15%;
@@ -40,6 +41,7 @@
   border-radius: 5px;
   transition: 0.3s;
   background-color: lightgray;
+  height: 100%; /* Wtf ?????? */
 }
 
 .card-padding {
