--- a/src/components/controls/Controls.css
+++ b/src/components/controls/Controls.css
@@ -1,10 +1,8 @@
-.form-wrapper{
-    padding: 50px;
+.form-container{
     flex: 1 1;
 }
 
 .attack-status {
-    padding-top: 50px;
     width: 100%;
     height: 100%;
 }
@@ -15,13 +13,13 @@
     width: 100%;
 }
 
-.upper {
+.controls-container {
     height: 100%;
     display: flex;
     flex-flow: column;
 }
 
-.lmfao {
+.align-horizontal {
     width:100%;
     padding-bottom: 10px;
 }
@@ -47,4 +45,8 @@
 .reroll-button {
     width: 100%;
     padding: 10%;
+}
+
+.padding {
+    padding: 50px;
 }
